[package]
name = "osu-glow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
websocket = "0.27.1"
wooting-rgb = "0.3.4"
wooting-analog-wrapper = { git = "https://github.com/WootingKb/wooting-analog-sdk" }
